Fixed horizontal overflow for legend with a lot of team names

--- a/src/Legend.module.css
+++ b/src/Legend.module.css
@@ -4,6 +4,8 @@
   justify-content: space-around;
   padding: 0;
   margin: 0;
+  white-space: nowrap;
+  overflow: auto;
 }
 
 .ListItem {
@@ -18,6 +20,7 @@
   padding: 0.25rem;
   border-radius: 0.25rem;
   text-transform: capitalize;
+  overflow: auto;
 }
 .ListItem:last-of-type {
   margin-right: 0;
@@ -29,4 +32,9 @@
   border-radius: 0.25rem;
   display: inline-block;
   margin-right: 0.25rem;
+}
+
+.ItemName {
+  overflow: auto;
+  text-overflow: ellipsis;
 }
